--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">DJ Satoda</a>
+            <a class="navbar-brand" href="index.html">DJ Satoda</a>
             <form class="d-flex">
                 <!-- <button class="btn btn-primary" type="submit">Reach Out</button> -->
                 <a href="reachout.html" class="btn btn-primary">Reach Out</a>
