--- a/reachout.html
+++ b/reachout.html
@@ -7,15 +7,15 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="home.html">DJ Satoda</a>
+            <a class="navbar-brand" href="index.html">DJ Satoda</a>
             <form class="d-flex">
                 <!-- <button class="btn btn-primary" action="/" type="submit">Return Home</button> -->
-                <a href="home.html" class="btn btn-outline">Return Home</a>
+                <a href="index.html" class="btn btn-outline">Return Home</a>
 
             </form>
             <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
