Updating text file icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div id="aboutMe" class="desktopIcon">
             <div id="mydivheader">
                 <a href="./aboutMe.html">
-                <img id="txtImage" src="img/text.png">
+                <img id="txtImage" src="img/textFile.png">
                 </a>        
                 <p>aboutMe.txt</p>
             </div>
@@ -36,7 +36,7 @@
             <div id="importantImage" class="desktopIcon">
             <div id="mydivheader">
                 <a href="https://i.pinimg.com/564x/ef/59/0d/ef590d3e2990e6827d96ad8ce55a755b.jpg">
-                <img id="txtImage" src="img/text.png">
+                <img id="txtImage" src="img/imageFile.png">
                 </a>        
                 <p>important.jpg</p>
             </div>
